fixed flickering of ocdoc tokens in ace editor

--- a/app/sass/mod_ace_theme.scss
+++ b/app/sass/mod_ace_theme.scss
@@ -108,7 +108,6 @@
 	}
 	
 	.ace_comment.ace_ocdoc {
-		color: rgb(0, 102, 255);
 		color: #316dc7;
 	}
 	
